changed project structure

--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -42,41 +42,41 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Options\Alignment.cs" />
-    <Compile Include="Api\Options\AppType.cs" />
-    <Compile Include="Api\Options\AssertionMode.cs" />
-    <Compile Include="Api\Options\BooleanEvaluation.cs" />
-    <Compile Include="Api\Options\CodeAlignment.cs" />
-    <Compile Include="Api\Options\CompileOptions.cs" />
-    <Compile Include="Api\Options\CompilerHints.cs" />
-    <Compile Include="Api\Options\CompilerOptions.cs" />
-    <Compile Include="Api\Options\ConditionalCompilationOptions.cs" />
-    <Compile Include="Api\Options\ConditonalDefine.cs" />
-    <Compile Include="Api\Options\DebugInformation.cs" />
-    <Compile Include="Api\Options\DenyUnitInPackages.cs" />
-    <Compile Include="Api\Options\DerivedListOption.cs" />
-    <Compile Include="Api\Options\DerivedOptionBase.cs" />
-    <Compile Include="Api\Options\DerivedValueOption.cs" />
-    <Compile Include="Api\Options\DesignOnlyUnit.cs" />
-    <Compile Include="Api\Options\ElseCondition.cs" />
-    <Compile Include="Api\Options\ExcessPrecisionForResults.cs" />
-    <Compile Include="Api\Options\ExportCppObjects.cs" />
-    <Compile Include="Api\Options\ExtendedCompatiblityMode.cs" />
-    <Compile Include="Api\Options\ExtendedSyntax.cs" />
-    <Compile Include="Api\Options\ExternalSymbol.cs" />
+    <Compile Include="DataTypes\Alignment.cs" />
+    <Compile Include="DataTypes\AppType.cs" />
+    <Compile Include="DataTypes\AssertionMode.cs" />
+    <Compile Include="DataTypes\BooleanEvaluation.cs" />
+    <Compile Include="DataTypes\CodeAlignment.cs" />
+    <Compile Include="DataTypes\CompileOptions.cs" />
+    <Compile Include="DataTypes\CompilerHints.cs" />
+    <Compile Include="Bundles\CompilerOptions.cs" />
+    <Compile Include="DataTypes\ConditionalCompilationOptions.cs" />
+    <Compile Include="DataTypes\ConditonalDefine.cs" />
+    <Compile Include="DataTypes\DebugInformation.cs" />
+    <Compile Include="DataTypes\DenyUnitInPackages.cs" />
+    <Compile Include="DataTypes\DerivedListOption.cs" />
+    <Compile Include="DataTypes\DerivedOptionBase.cs" />
+    <Compile Include="DataTypes\DerivedValueOption.cs" />
+    <Compile Include="DataTypes\DesignOnlyUnit.cs" />
+    <Compile Include="DataTypes\ElseCondition.cs" />
+    <Compile Include="DataTypes\ExcessPrecisionForResults.cs" />
+    <Compile Include="DataTypes\ExportCppObjects.cs" />
+    <Compile Include="DataTypes\ExtendedCompatiblityMode.cs" />
+    <Compile Include="DataTypes\ExtendedSyntax.cs" />
+    <Compile Include="DataTypes\ExternalSymbol.cs" />
     <Compile Include="DataTypes\HeaderString.cs" />
-    <Compile Include="Api\Options\HighCharsUnicode.cs" />
-    <Compile Include="Api\Options\ICondition.cs" />
-    <Compile Include="Api\Options\IDerivedOption.cs" />
-    <Compile Include="Api\Options\IfDefCondition.cs" />
-    <Compile Include="Api\Options\MetaInformation.cs" />
-    <Compile Include="Api\Options\OptionSet.cs" />
-    <Compile Include="Api\Options\Platform.cs" />
-    <Compile Include="Api\Options\PlatformKey.cs" />
+    <Compile Include="DataTypes\HighCharsUnicode.cs" />
+    <Compile Include="DataTypes\ICondition.cs" />
+    <Compile Include="DataTypes\IDerivedOption.cs" />
+    <Compile Include="DataTypes\IfDefCondition.cs" />
+    <Compile Include="DataTypes\MetaInformation.cs" />
+    <Compile Include="Bundles\OptionSet.cs" />
+    <Compile Include="Bundles\Platform.cs" />
+    <Compile Include="Bundles\PlatformKey.cs" />
     <Compile Include="DataTypes\HppEmitMode.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Internal\Options\AnyCpuPlatform.cs" />
-    <Compile Include="Internal\Options\DefaultPlatform.cs" />
+    <Compile Include="Bundles\AnyCpuPlatform.cs" />
+    <Compile Include="Bundles\DefaultPlatform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
