--- a/PasPasPas.Parsing/project.json
+++ b/PasPasPas.Parsing/project.json
@@ -7,7 +7,9 @@
     "Microsoft.AnalyzerPowerPack": "1.1.0",
     "Microsoft.CodeAnalysis.FxCopAnalyzers": "1.1.0",
     "Microsoft.NETCore": "5.0.0",
-    "Microsoft.NETCore.Portable.Compatibility": "1.0.0"
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
+    "System.Runtime.Analyzers": "1.1.0",
+    "System.Runtime.InteropServices.Analyzers": "1.1.0"
   },
   "frameworks": {
     "dotnet": {
