--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Parser\StatementTest.cs" />
     <Compile Include="Parser\ProgramTest.cs" />
     <Compile Include="Parser\TestDeclarations.cs" />
+    <Compile Include="StackedReaderTest.cs" />
     <Compile Include="Tokenizer\CompilerDirectiveTest.cs" />
     <Compile Include="Tokenizer\TokenizerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
