--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -42,6 +42,8 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\CommonConfiguration.cs" />
+    <Compile Include="Configuration\ISettingsService.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Input\IFile.cs" />
     <Compile Include="Input\IParserInput.cs" />
@@ -57,6 +59,11 @@
     <Compile Include="Log\MessageGenerator.cs" />
     <Compile Include="Log\ObjectWithLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IServiceProvider.cs" />
+    <Compile Include="Service\IServiceResolutionPolicy.cs" />
+    <Compile Include="Service\ServiceProvider.cs" />
+    <Compile Include="Service\StandardServiceResolutionPolicy.cs" />
+    <Compile Include="Service\StandardServices.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
