extended compiler directive parser

--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -74,6 +74,8 @@
     <Compile Include="DataTypes\ImportGlobalUnitData.cs" />
     <Compile Include="DataTypes\IncludeFilePathResolver.cs" />
     <Compile Include="DataTypes\IoCallChecks.cs" />
+    <Compile Include="DataTypes\LocalDebugSymbols.cs" />
+    <Compile Include="DataTypes\LongDelphiStrings.cs" />
     <Compile Include="DataTypes\MetaInformation.cs" />
     <Compile Include="Bundles\OptionSet.cs" />
     <Compile Include="Bundles\Platform.cs" />
