--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DataTypes\CompileOptions.cs" />
     <Compile Include="DataTypes\CompilerHints.cs" />
     <Compile Include="Bundles\CompilerOptions.cs" />
+    <Compile Include="DataTypes\CompilerOptmization.cs" />
     <Compile Include="DataTypes\ConditionalCompilationOptions.cs" />
     <Compile Include="DataTypes\ConditonalDefine.cs" />
     <Compile Include="DataTypes\DebugInformation.cs" />
@@ -81,7 +82,9 @@
     <Compile Include="Bundles\Platform.cs" />
     <Compile Include="Bundles\PlatformKey.cs" />
     <Compile Include="DataTypes\HppEmitMode.cs" />
+    <Compile Include="DataTypes\OpenDelphiStrings.cs" />
     <Compile Include="DataTypes\PathOptionSet.cs" />
+    <Compile Include="DataTypes\RuntimeOverflowChecks.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Bundles\AnyCpuPlatform.cs" />
     <Compile Include="Bundles\DefaultPlatform.cs" />
