--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DataTypes\CompilerHints.cs" />
     <Compile Include="Bundles\CompilerOptions.cs" />
     <Compile Include="DataTypes\CompilerOptmization.cs" />
+    <Compile Include="DataTypes\CompilerWarnings.cs" />
     <Compile Include="DataTypes\ConditionalCompilationOptions.cs" />
     <Compile Include="DataTypes\ConditonalDefine.cs" />
     <Compile Include="DataTypes\ConstantValues.cs" />
@@ -87,9 +88,11 @@
     <Compile Include="DataTypes\HppEmitMode.cs" />
     <Compile Include="DataTypes\OpenDelphiStrings.cs" />
     <Compile Include="DataTypes\PathOptionSet.cs" />
+    <Compile Include="DataTypes\RttiLinkMode.cs" />
     <Compile Include="DataTypes\RuntimeOverflowChecks.cs" />
     <Compile Include="DataTypes\RuntimeRangeChecks.cs" />
     <Compile Include="DataTypes\StackFramesGeneration.cs" />
+    <Compile Include="DataTypes\WeakPackaging.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Bundles\AnyCpuPlatform.cs" />
     <Compile Include="Bundles\DefaultPlatform.cs" />
