added support for warning options

--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -88,10 +88,18 @@
     <Compile Include="DataTypes\HppEmitMode.cs" />
     <Compile Include="DataTypes\OpenDelphiStrings.cs" />
     <Compile Include="DataTypes\PathOptionSet.cs" />
+    <Compile Include="DataTypes\RequireScopedEnums.cs" />
+    <Compile Include="DataTypes\RttiForPublishSection.cs" />
     <Compile Include="DataTypes\RttiLinkMode.cs" />
     <Compile Include="DataTypes\RuntimeOverflowChecks.cs" />
+    <Compile Include="DataTypes\RuntimePackageMode.cs" />
     <Compile Include="DataTypes\RuntimeRangeChecks.cs" />
+    <Compile Include="DataTypes\ShortVarStringChecks.cs" />
     <Compile Include="DataTypes\StackFramesGeneration.cs" />
+    <Compile Include="DataTypes\StrongTypeLinking.cs" />
+    <Compile Include="DataTypes\SymbolDefinitionInfo.cs" />
+    <Compile Include="DataTypes\SymbolReferenceInfo.cs" />
+    <Compile Include="DataTypes\TypeCheckedPointers.cs" />
     <Compile Include="DataTypes\WarningKey.cs" />
     <Compile Include="DataTypes\WarningMode.cs" />
     <Compile Include="DataTypes\WarningOption.cs" />
