--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Configuration\IConfigurationSettings.cs" />
     <Compile Include="Configuration\TypedConfigurationSettings.cs" />
     <Compile Include="Input\PathResolver.cs" />
+    <Compile Include="Input\ResolvedFile.cs" />
     <Compile Include="Input\StackedFileReader.cs" />
     <Compile Include="Input\StringInput.cs" />
     <Compile Include="Log\ILogService.cs" />
